--- a/Todo_List_App/app/src/main/res/values/strings.xml
+++ b/Todo_List_App/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Teste</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="em_andamento">Em andamento</string>
 </resources>
