--- a/Tela_Criacao_Postagem_PI_App/app/src/main/res/values/strings.xml
+++ b/Tela_Criacao_Postagem_PI_App/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
         <item>Tratamento</item>
         <item>Cirurgia</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
